--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,5 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[**/package.json]
-indent_size = 2
+[modules/*.js]
+indent_size = 4
