--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "underscore": ">=1.8.3"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "coffeescript": "^2.7.0",
     "cpy-cli": "^3.1.1",
     "docco": "^0.9.1",
