--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cpy-cli": "^3.1.1",
     "docco": "^0.9.1",
     "eslint": "^8.7.0",
+    "jquery": "^3.7.0",
     "karma": "^6.3.11",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-qunit": "^4.1.2",
